--- a/Challenge/NourhanForm.resx
+++ b/Challenge/NourhanForm.resx
@@ -117,4 +117,11 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="label1.Text" xml:space="preserve">
+    <value>Please enter in the amount of money that went IN and OUT of your account in the past 3 months:
+example:
+month 1, in: £300
+month 1, out: £200
+the app will then work out how much you can afford to contribute to your chosen object </value>
+  </data>
 </root>
